Adding some bar color types and fixed csv filename issue

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
 <body>
   <script src="http://d3js.org/d3.v3.js"></script>
-  <script src="./js/selectionBox.js"/>
-
-
-  </script>
+  <script src="./js/index.js"/></script>
 </body>
 
 </html>
