--- a/test/test.html
+++ b/test/test.html
@@ -53,9 +53,6 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.csv("test.csv", type, function(error, data) {
-  x.domain(d3.extent(data, function(d) { return d.tons_2015; })).nice();
-  y.domain(data.map(function(d) { return d.dms_orig; }));
-
   var export_totals = d3.nest()
       .key(function(d) { 
           // Validate that origin and destination are not the same and commodity code matches
@@ -69,6 +66,9 @@ d3.csv("test.csv", type, function(error, data) {
   export_totals.pop();
   console.log(export_totals);
 
+  x.domain(d3.extent(export_totals, function(d) { return Math.max(d.values); })).nice();
+  y.domain(data.map(function(d) { return d.dms_orig; }));
+
   svg.selectAll(".bar")
       .data(export_totals)
       .enter()
@@ -76,7 +76,7 @@ d3.csv("test.csv", type, function(error, data) {
       .attr("class", function(d) { return "bar bar--" + (d.values < 0 ? "negative" : "positive"); })
       .attr("x", function(d) { return x(Math.min(0, d.values)); })
       .attr("y", function(d) { return y(d.key); })
-      .attr("width", function(d) { return Math.abs(x(d.values) - x(0)); })
+      .attr("width", function(d) { return Math.abs(x(d.values)); })
       .attr("height", y.rangeBand());
 
   svg.append("g")
