Put correct margining around the bar chart, softened the chart colors and make the chart re-size properly.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="toolbar_container box" id="main_toolbar">
           <div class="toolbar_item box_last" id="comm_data_drop_container">
-            <div>Pick the commodity you'd like to view: </div>
+            <div class="text_box">Pick the commodity you'd like to view:</div>
             <div id="comm_data_drop_div"></div>
             <!-- D3 select-box here "comm_data_drop_menu" -->
           </div>
