Adds a legend to the map

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
   </div>
   </div>
 
+  <div id="legend_container" class="box_last">
+    <div id="legend_title" class="box">Legend</div>
+    <div id="legend_box" class="box_last">
+      <div id="leg_box_pos" class="leg_info_box">
+        <div>Exports - </div>
+        <!-- Legend Exports SVG Circle  -->
+      </div>
+      <div id="leg_box_neg" class="leg_info_box">
+        <div>Imports - </div>
+        <!-- Legend Imports SVG Circle  -->
+      </div>
+    </div>
+  </div>
+
   <script src="./js/index.js" /></script>
 </body>
 
